# Silk-and-Stitch

./: .gitignore  Dockerfile  README.md  app.py  baseline_agent.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py
.github/workflows/: sync_to_huggingface.yml
fashion_env/: __init__.py  env.py  inventory.py  models.py  reward.py  tasks.py
ml/: __init__.py
ml/agents/: ppo_pytorch.py  rl_agent.py
ml/checkpoints/: eval_results.json  lstm_final.pt  ppo_ep100.pt  ppo_ep150.pt  ppo_ep200.pt  ppo_ep250.pt  ppo_ep300.pt  ppo_ep350.pt  ppo_ep400.pt  ppo_ep450.pt  ppo_ep50.pt  ppo_ep500.pt  ppo_final.pt  training_history.json
ml/data/: india_fashion_dataset.py
ml/explainability/: shap_explainer.py
ml/forecasting/: lstm_forecaster.py  lstm_pytorch.py
server/: app.py
static/: index.html
supply_chain/: __init__.py  task_supply_chain.py
supply_chain/data/: bangalore_data.py
supply_chain/models/: forecaster.py  optimizer.py
tests/: test_env.py
